--- a/loja/idolos.html
+++ b/loja/idolos.html
@@ -10,6 +10,8 @@
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="pagina.css">
+    <link rel="icon" href="img/Santos_Logo.png" type="image/x-icon">
+
 </head>
 <body>
     <div class="container2">
