--- a/loja/index.html
+++ b/loja/index.html
@@ -172,7 +172,7 @@
     <footer class="footer">
         <div class="footer-container">
             <a href="#" class="logo">
-                <img src="img/logo.png" alt="logo" />
+                <img src="img/Santos_Logo.png" alt="logo" />
             </a>
 
             <div class="share">
