--- a/loja/index.html
+++ b/loja/index.html
@@ -70,39 +70,40 @@
         <div class="box-container">
             
             <div class="box">
-                <img src="img/camisa2025.jpg" alt="Camisa Café Coado" />
-                <h3>Café coado</h3>
+                <img src="img/camisa2025.jpg" alt="Camisa 2025 Preta." />
+                <h3>Camisa 2025 Preta.</h3>
                 <div class="price">R$ 150,00 <span>R$ 200,00</span></div>
                 <a href="#" class="btn">Adicione ao Carrinho</a>
             </div>
             <!-- Repetição para os outros cafés -->
             <div class="box">
-                <img src="img/camisa2025b.jpg" alt="Camisa Café Forte Amargo" />
-                <h3>Café Forte Amargo</h3>
+                <img src="img/camisa2025b.jpg" alt="Camisa 2025 Branca." />
+                <h3>Camisa 2025 Branca.</h3>
                 <div class="price">R$ 150,00 <span>R$ 200,00</span></div>
                 <a href="#" class="btn">Adicione ao Carrinho</a>
             </div>
             <div class="box">
-                <img src="img/camisapelé1kgol.webp" alt="Camisa Café Fit sem Açúcar" />
-                <h3>Café fit s/açucar</h3>
+                <img src="img/camisapelé1kgol.webp" alt="Camisa Pelé 1000 gols." />
+                <h3>Camisa Pelé 1000 gols.</h3>
                 <div class="price">R$ 150,00 <span>R$ 200,00</span></div>
                 <a href="#" class="btn">Adicione ao Carrinho</a>
             </div>
             <div class="box">
-                <img src="img/cj.webp" alt="Camisa Café com Leite" />
-                <h3>Café com Leite</h3>
+                <img src="img/cj.webp" alt="Camisa Charlie Brown Jr." />
+                <h3>Camisa Charlie Brown Jr.
+                    </h3>
                 <div class="price">R$ 200,00 <span>R$ 300,00</span></div>
                 <a href="#" class="btn">Adicione ao Carrinho</a>
             </div>
             <div class="box">
-                <img src="img/racionais.jpg" alt="Camisa Café com Chantilly" />
-                <h3>Café com Chantilly</h3>
+                <img src="img/racionais.jpg" alt="camisa racionais." />
+                <h3>camisa racionais.</h3>
                 <div class="price">R$ 250,00 <span>R$ 300,00</span></div>
                 <a href="#" class="btn">Adicione ao Carrinho</a>
             </div>
             <div class="box">
-                <img src="img/camisaazul.jpg" alt="Camisa Café Expresso" />
-                <h3>Café Expresso</h3>
+                <img src="img/camisaazul.jpg" alt="Camisa especial azul." />
+                <h3>Camisa especial azul.</h3>
                 <div class="price">R$ 269,00 <span>R$ 299,99</span></div>
                 <a href="#" class="btn">Adicione ao Carrinho</a>
             </div>
@@ -118,7 +119,7 @@
                 <p>Camisa perfeita! Chegou rápido e o tecido é de ótima qualidade. Visto com orgulho!
                    </p>
                 <img src="img/pic-1.png" alt="foto-cliente" class="user" />
-                <h3>— Rafael M.</h3>
+                <h3>— Ney.</h3>
                 <!-- Estrelas de avaliação -->
                 <div class="stars">
                     <i class="fa-solid fa-star"></i>
@@ -134,7 +135,7 @@
                 <p>Produto original, bem embalado e com ótimo acabamento. Comprarei novamente!
 </p>
                 <img src="img/pic-2.png" alt="foto-cliente" class="user" />
-                <h3>— Bianca S.</h3>
+                <h3>— Luigi.</h3>
                 <div class="stars">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -146,7 +147,7 @@
                 <img src="img/yuri.jpg" alt="" />
                 <p>Adorei a camisa, mas a numeração ficou um pouco justa. No mais, excelente!</p>
                 <img src="img/pic-3.png" alt="foto-cliente" class="user" />
-                <h3>— Leandro F
+                <h3>— Yuyu.
                 </h3>
                 <div class="stars">
                     <i class="fa-solid fa-star"></i>
